--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "simple-react-google-maps": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
